--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="editTextBack">#f2f2f2</color>
+    <color name="greenColor">#0f0</color>
+    <color name="whiteColor">#fff</color>
+    <color name="redcolor">#FF0D29</color>
+    <color name="bluecolor">#0A44D6</color>
+    <color name="orangecolor">#FB8C00</color>
 </resources>
